# asana-omnifocus-sync

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md  config.example.toml  flake.nix
docs/: design.md  requirements.md  spec.md  use-cases.md
scripts/: apply.js  dump.js
src/: asana.rs  config.rs  main.rs  model.rs  omnifocus.rs  sync.rs
